test/expected/using_f-name_v.out
using U = void (*F)(int)
               ^
16: error: "using" type can not have a name
